001-IntroToKubernetes/Student/Resources/Templates/helm-webapp-deployment.yml
---
# Deploys the container as a single pod in the Kubernetes Cluster
# 
# kubectl create -f webapp-deployment.yml
# 
# This is how we validate that it is working
# kubectl describe deployment nginx-webapp -n whatthehack-webapps
#
# This is how to remove this deployment
# kubectl delete deployment nginx-webapp -n whatthehack-webapps
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-webapp
  namespace: whatthehack-webapps
  labels:
    k8s-app: nginx-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: nginx-webapp
  template:
    metadata:
      labels:
        k8s-app: nginx-webapp
    spec:
      containers:
      - name: nginx-webapp
        image: whatthehackmsft/nginxserver:v1
        ports:
        - containerPort: 80
          name: ui
          protocol: TCP
